social opens in the new tab

--- a/index.html
+++ b/index.html
@@ -224,12 +224,12 @@
     <footer>
         <div class="wrapper">
             <div class="social">
-                <a href="http://facebook.com/"><img src="images/social_media/facebook.svg" alt="facebook"></a>                
-                <a href="http://google.com/"><img src="images/social_media/google.svg" alt="google"></a>
-                <a href="http://instagram.com/"><img src="images/social_media/instagram.svg" alt="instagram"></a>
-                <a href="http://linkedin.com/"><img src="images/social_media/linkedin.svg" alt="linkedin"></a>
-                <a href="http://twiter.com/"><img src="images/social_media/twitter.svg" alt="twitter"></a>
-                <a href="http://youtube.com/"><img src="images/social_media/youtube.svg" alt="youtube"></a>
+                <a href="http://facebook.com/" target="_blank"><img src="images/social_media/facebook.svg" alt="facebook"></a>                
+                <a href="http://google.com/" target="_blank"><img src="images/social_media/google.svg" alt="google"></a>
+                <a href="http://instagram.com/" target="_blank"><img src="images/social_media/instagram.svg" alt="instagram"></a>
+                <a href="http://linkedin.com/" target="_blank"><img src="images/social_media/linkedin.svg" alt="linkedin"></a>
+                <a href="http://twiter.com/" target="_blank"><img src="images/social_media/twitter.svg" alt="twitter"></a>
+                <a href="http://youtube.com/" target="_blank"><img src="images/social_media/youtube.svg" alt="youtube"></a>
             </div>
 
         </div>
